--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,11 +11,11 @@ jobs:
   test:
     runs-on: ${{ matrix.os }}
     env:
-      HOST: localhost
-      PORT: 5432
-      USER: root
-      PASSWORD: root
-      DBNAME: root
+      HOST: ${{ secrets.HOST }}
+      PORT: ${{ secrets.PORT }}
+      USER: ${{ secrets.USER }}
+      PASSWORD: ${{ secrets.PASSWORD }}
+      DBNAME: ${{ secrets.DBNAME }}
     strategy:
       matrix:
         go_version: ['1.18', '1.17', '>=1.18']
