--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,20 +1,35 @@
 name: Docker
 
 on:
- workflow_call:
+  workflow_call:
 
 jobs:
- docker:
-  runs-on: ubuntu-latest
-  steps:
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v3
 
     - name: setup Docker Build
       uses: docker/setup-buildx-action@v2.0.0
-
+      
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v3.0.0
+      with:
+    # Artifact name
+        name: programa
+      
     - name: Docker Login
       uses: docker/login-action@v2.0.0
       with:
         username: sandrocaetano
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
-
+        
+        
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v3.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: sandrocaetano/go_ci:${{github.ref_name}}
